Fixed formatting on sidebar. Long titles are now truncated

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -95,7 +95,7 @@ i.toolbar-icon {
 	padding-left: 0px;
 	margin-top: 2px;
 	text-indent: 10px;
-	margin-right: 5px;
+	margin-right: -20px;
 }
 
 .display-row {
@@ -369,6 +369,9 @@ label {
   margin: 0 0 -1px;
   padding: 8px 14px;
   border: 1px solid #e5e5e5;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .bs-docs-sidenav > li:first-child > a {
   -webkit-border-radius: 6px 6px 0 0;
